# agentdiff

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: agentdiff-check-example.yml  ci.yml  release.yml
agentdiff/: __init__.py  align.py  ci.py  cli.py  config.py  diff.py  models.py  similarity.py
agentdiff/adapters/: __init__.py  base.py  jsonl.py  langfuse.py  otel.py
agentdiff/render/: __init__.py  viewer.html.j2
examples/: agentdiff.toml  trace-a.jsonl  trace-b.jsonl  trace-langfuse.json  trace-otel.json
plans/20260617-1740-agentdiff-mvp/: phase-01-scaffold-datamodel-jsonl-adapter.md  phase-02-step-alignment-algorithm.md  phase-03-diff-delta-computation.md  phase-04-html-viewer-cli.md  phase-05-otel-langfuse-adapters.md  phase-06-golden-trace-ci-mode.md  phase-07-tests-packaging-release.md  plan.md
tests/: conftest.py  test_align.py  test_ci.py  test_cli.py  test_config.py  test_diff.py  test_end_to_end.py  test_jsonl_adapter.py  test_langfuse_adapter.py  test_otel_adapter.py  test_render.py  test_similarity.py
