[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentdiff"
version = "0.1.0"
description = "git diff, but for AI agent runs — align two agent trajectories, mark divergence, report token/cost/latency delta."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "tranhuuhuy297" }]
keywords = ["llm", "agents", "diff", "observability", "evals", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.0",
  "jinja2>=3.1",
  "rapidfuzz>=3.0",
]

[project.optional-dependencies]
semantic = ["fastembed>=0.3"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "build>=1.2"]

[project.scripts]
agentdiff = "agentdiff.cli:app"

[project.urls]
Homepage = "https://github.com/tranhuuhuy297/agentdiff"
Repository = "https://github.com/tranhuuhuy297/agentdiff"
Issues = "https://github.com/tranhuuhuy297/agentdiff/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentdiff"]
# Ship the Jinja viewer template inside the wheel (the #1 packaging risk).
artifacts = ["agentdiff/render/viewer.html.j2"]

[tool.hatch.build.targets.sdist]
include = ["agentdiff", "examples", "tests", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.per-file-ignores]
# Tests embed long inline trace/data literals; line length is not meaningful there.
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["agentdiff"]
omit = ["agentdiff/render/viewer.html.j2"]
